--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4668290'>Clear GpuChannel directly instead of using RemoveChannel()</a></td><td>ilwoo905.lee</td></tr>
 <tr><td>2023-07-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4670536'>Move getting eye FOVs after transport initialization.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-06-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4639441'>Stop calling redraw on WillBeginImplFrame() after Draw</a></td><td>Sunghyeok Kang</td></tr>
 <tr><td>2023-06-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4505177'>Implement VR tests for cardboard vr provider.</a></td><td>Viatcheslav Ostapenko</td></tr>
