--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4675022'>Removing the code related to SessionRestoreManager.</a></td><td>Nivedan Sharma</td></tr>
 <tr><td>2023-07-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4686712'>Remove remaining of DownloadStatsUma</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-07-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4685592'>Remove debug-history-intervention-no-user-activation flag and all</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-07-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4668290'>Clear GpuChannel directly instead of using RemoveChannel()</a></td><td>ilwoo905.lee</td></tr>
