--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-07-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4703512'>Convert CreditCard::VirtualCardEnrollmentType enum to enum class</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2023-07-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4703377'>Convert CreditCard::Issuer enum to enum class</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2023-07-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4654069'>Removing &quot;cct-retaining-state-in-memory&quot; in m116</a></td><td>Nivedan Sharma</td></tr>
 <tr><td>2023-07-18</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4675022'>Removing the code related to SessionRestoreManager.</a></td><td>Nivedan Sharma</td></tr>
 <tr><td>2023-07-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4686712'>Remove remaining of DownloadStatsUma</a></td><td>Shubham Gupta</td></tr>
