--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-07-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4706834'>Remove OS deps change and unnecessary method call.</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-07-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4706938'>Fork cardboard es2 gl renderer to replace GL with ui/gl version</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-07-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4707109'>Convert CreditCard::VirtualCardEnrollmentState enum to enum class</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2023-07-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4686139'>Removed extra period in single line sentence</a></td><td>neehit goyal</td></tr>
