--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4719806'>Remove unnecessary macros on Lacros tests</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4721906'>Enable WebXrVrCardboardPermissionTest.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4729189'>OverlayTransformApiHelper fixes</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4729621'>Check if input text is empty before using it during stylus handwriting</a></td><td>Mahesh Machavolu</td></tr>
