--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4728770'>[GURL] Migrate mReferrer and mOriginalUrl to use GURL</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4736943'>Use base::to_underlying in ui/*</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4722154'>Use base::to_underlying instead of static_cast</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2023-07-31</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4719806'>Remove unnecessary macros on Lacros tests</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4721906'>Enable WebXrVrCardboardPermissionTest.</a></td><td>Viatcheslav Ostapenko</td></tr>
 <tr><td>2023-07-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4729189'>OverlayTransformApiHelper fixes</a></td><td>Shubham Gupta</td></tr>
