--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4741073'>Refer to the viewport&#x27;s width correctly</a></td><td>Hyomin Kim</td></tr>
+<tr><td>2023-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4741215'>Use base::to_underlying in chrome/*</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4728770'>[GURL] Migrate mReferrer and mOriginalUrl to use GURL</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4736943'>Use base::to_underlying in ui/*</a></td><td>Prakhar Shrivastav</td></tr>
 <tr><td>2023-08-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4722154'>Use base::to_underlying instead of static_cast</a></td><td>Prakhar Shrivastav</td></tr>
