--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4751341'>Remove unused build flag in media/</a></td><td>Dheeraj Kumar</td></tr>
+<tr><td>2023-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4751384'>Removing kCertificateTransparencyAndroid feature flag</a></td><td>Nivedan Sharma</td></tr>
+<tr><td>2023-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4741046'>Use base::to_underlying in crashpad.</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4745201'>Remove ScopedDisableClientSideDecorationsForTest</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-08-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4721132'>Flag: Extend xsurface-metrics-reporting flag</a></td><td>Nivedan Sharma</td></tr>
 <tr><td>2023-08-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4741073'>Refer to the viewport&#x27;s width correctly</a></td><td>Hyomin Kim</td></tr>
