--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-08</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4756109'>Change integerListToIntArray to handle Collection&lt;Integer&gt;.</a></td><td>vikas.mundra</td></tr>
 <tr><td>2023-08-07</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4746780'>Convert  AudioLogFactory::AudioComponent enum to enum class</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4751341'>Remove unused build flag in media/</a></td><td>Dheeraj Kumar</td></tr>
 <tr><td>2023-08-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4751384'>Removing kCertificateTransparencyAndroid feature flag</a></td><td>Nivedan Sharma</td></tr>
