--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4764165'>Remove SuppressLint as lint check is fixed.</a></td><td>vikas.mundra</td></tr>
+<tr><td>2023-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4756107'>Convert MediaTrack::Type enum to enum class</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4756230'>Convert MediaPermission::Type enum to enum class</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4756320'>Convert MediaResource::Type enum to enum class</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-09</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4755694'>Remove unused import from TitleOriginLabel</a></td><td>Ajay Sharma</td></tr>
