--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-15</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4777742'>Moving common method LatencyToString to one place.</a></td><td>Rahul Yadav</td></tr>
 <tr><td>2023-08-11</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4751001'>Convert gfx::BaselineStyle enum to enum class</a></td><td>Yogesh</td></tr>
 <tr><td>2023-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4764165'>Remove SuppressLint as lint check is fixed.</a></td><td>vikas.mundra</td></tr>
 <tr><td>2023-08-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4756107'>Convert MediaTrack::Type enum to enum class</a></td><td>Rahul Yadav</td></tr>
