--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4773066'>Removed extra period in single line sentence</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2023-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4783268'>Update enum member style of MediaStatus::State</a></td><td>Dheeraj Kumar</td></tr>
 <tr><td>2023-08-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4788970'>Reset capture_handle_ when destructor is called</a></td><td>Nivedan Sharma</td></tr>
 <tr><td>2023-08-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4782289'>Naming the AnimationDirection enum to match the style guide</a></td><td>Nivedan Sharma</td></tr>
