--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,10 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4812603'>Remove GpuMemoryBufferManager from CommandBufferProxyImpl</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4795988'>Update MediaContainerName enum to enum class</a></td><td>Dheeraj Kumar</td></tr>
+<tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4813139'>Remove unsued mini_installer manifest</a></td><td>Prakhar Shrivastav</td></tr>
+<tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4813298'>Naming the AnimationType enum to match the style guide</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2023-08-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4776018'>Resolve LeakedDanglingUntriaged issues in gpu/ipc/host/gpu_disk_cache.h</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-08-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4773066'>Removed extra period in single line sentence</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2023-08-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4783268'>Update enum member style of MediaStatus::State</a></td><td>Dheeraj Kumar</td></tr>
