--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-08-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4812811'>Naming the State enum to match the style guide</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4812603'>Remove GpuMemoryBufferManager from CommandBufferProxyImpl</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4795988'>Update MediaContainerName enum to enum class</a></td><td>Dheeraj Kumar</td></tr>
 <tr><td>2023-08-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4813139'>Remove unsued mini_installer manifest</a></td><td>Prakhar Shrivastav</td></tr>
