--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4834415'>Refactor TimingCalculations.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-09-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4617691'>Revert &quot;Set StylusHandwritingImeCallback when the web contents is updated&quot;</a></td><td>Syed Wajid</td></tr>
 <tr><td>2023-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4825666'>Naming the enums in Graph class to match the style guide</a></td><td>Jitesh Pareek</td></tr>
 <tr><td>2023-09-01</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4825405'>Naming the State enum to match the style guide</a></td><td>Jitesh Pareek</td></tr>
