--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4865914'>Add Clear() method to nullify CrossThreadHandle</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4853123'>Remove expired histograms Ash.Shelf.Palette.Usage</a></td><td>vikas.mundra</td></tr>
 <tr><td>2023-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4856103'>Use inline build condition instead of deprecated function</a></td><td>Dushyant Kant Sharma</td></tr>
 <tr><td>2023-09-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4834415'>Refactor TimingCalculations.</a></td><td>Shubham Gupta</td></tr>
