--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4835235'>Use CrossThreadHandle in SctpTransportProxy</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4876513'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4876037'>Add Clear() method to nullify CrossThreadHandle</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4865914'>Add Clear() method to nullify CrossThreadHandle</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4853123'>Remove expired histograms Ash.Shelf.Palette.Usage</a></td><td>vikas.mundra</td></tr>
 <tr><td>2023-09-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4856103'>Use inline build condition instead of deprecated function</a></td><td>Dushyant Kant Sharma</td></tr>
