--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4878258'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4876259'>remove TODO as mention changes already being done</a></td><td>Dushyant Kant Sharma</td></tr>
 <tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4835235'>Use CrossThreadHandle in SctpTransportProxy</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-09-19</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4876513'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
