--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4892166'>Replace erase(std::remove_if()) to base::EraseIf() in src/</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4891400'>remove BrowserPaymentRequest interface isPaymentSheetBasedPaymentAppSupported method as mention in TODO</a></td><td>Dushyant Kant Sharma</td></tr>
+<tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4881405'>Removing unnecessary member variable</a></td><td>Deep Shah</td></tr>
+<tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4886043'>Use base::EraseIf()</a></td><td>Dushyant Kant Sharma</td></tr>
+<tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4889347'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4881791'>Use base::EraseIf()</a></td><td>Aditya Sharma</td></tr>
 <tr><td>2023-09-22</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4884634'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-21</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4878258'>Use base::EraseIf()</a></td><td>Sakib Shabir Tantray</td></tr>
