--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,12 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4881241'>computeMaxWidthOfListAdapterItems method seems redundant and can be removed</a></td><td>Leena Kaushik</td></tr>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4893748'>Use base::ranges::transform() instead std::transform</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4885724'>Replace erase(std::remove_if())</a></td><td>Dushyant Kant Sharma</td></tr>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4886073'>Use base::EraseIf()</a></td><td>Dushyant Kant Sharma</td></tr>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4891763'>Use inline build condition instead of deprecated function</a></td><td>Dushyant Kant Sharma</td></tr>
+<tr><td>2023-09-26</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4875778'>Added null check for default Ime package in AndroidStylusWritingHandler</a></td><td>syed.wajid</td></tr>
 <tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4892166'>Replace erase(std::remove_if()) to base::EraseIf() in src/</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4891400'>remove BrowserPaymentRequest interface isPaymentSheetBasedPaymentAppSupported method as mention in TODO</a></td><td>Dushyant Kant Sharma</td></tr>
 <tr><td>2023-09-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4881405'>Removing unnecessary member variable</a></td><td>Deep Shah</td></tr>
