--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-09-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4886665'>Use base::EraseIf()</a></td><td>naman.yadav</td></tr>
+<tr><td>2023-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4900444'>Use base::Contains() instead of std::find()</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4891535'>Use base::EraseIf()</a></td><td>Aditya Sharma</td></tr>
 <tr><td>2023-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4896065'>Use base::EraseIf()</a></td><td>Leena Kaushik</td></tr>
 <tr><td>2023-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4891993'>Use base::EraseIf()</a></td><td>Leena Kaushik</td></tr>
