--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4909374'>Convert AnimationEvent Type enum to enum class</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4753622'>Remove logs mentioned in TODO</a></td><td>Yogesh</td></tr>
+<tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904450'>Use base::Contains() instead of std::find()</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-10-02</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4894032'>Convert UIResourceRequestType enum to enum class</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-09-29</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4886665'>Use base::EraseIf()</a></td><td>naman.yadav</td></tr>
 <tr><td>2023-09-28</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4900444'>Use base::Contains() instead of std::find()</a></td><td>Sakib Shabir Tantray</td></tr>
