--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,11 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4910635'>[Code Health] Convert DrawResult enum to enum class</a></td><td>Sakib Shabir Tantray</td></tr>
+<tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904417'>Use base::EraseIf()</a></td><td>Smriti</td></tr>
+<tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4905003'>Use inline build condition instead of deprecated function</a></td><td>Himadri Agrawal</td></tr>
+<tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4910702'>Convert enum to enum class</a></td><td>naman.yadav</td></tr>
+<tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4721787'>Return nul character when Ctrl+2 is pressed</a></td><td>Hyomin Kim</td></tr>
 <tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4909374'>Convert AnimationEvent Type enum to enum class</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4753622'>Remove logs mentioned in TODO</a></td><td>Yogesh</td></tr>
 <tr><td>2023-10-03</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904450'>Use base::Contains() instead of std::find()</a></td><td>Sakib Shabir Tantray</td></tr>
