--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,9 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904797'>Convert enum to enum class</a></td><td>Ravindra</td></tr>
+<tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904796'>Use base::Contains() instead of std::find()</a></td><td>Aditya</td></tr>
+<tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4909370'>Use inline permission string instead of declaring explicitly</a></td><td>Himadri Agrawal</td></tr>
 <tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4910635'>[Code Health] Convert DrawResult enum to enum class</a></td><td>Sakib Shabir Tantray</td></tr>
 <tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904417'>Use base::EraseIf()</a></td><td>Smriti</td></tr>
 <tr><td>2023-10-04</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4905003'>Use inline build condition instead of deprecated function</a></td><td>Himadri Agrawal</td></tr>
