--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4930597'>[Code Health] Removing unnecessary use of optional on String.</a></td><td>Anguluri Aravind Kumar</td></tr>
 <tr><td>2023-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4892174'> Use base::EraseIf()</a></td><td>Himadri Agrawal</td></tr>
 <tr><td>2023-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904566'>Clean up Lollipop references in Android NCN</a></td><td>Aditya Sharma</td></tr>
 <tr><td>2023-10-05</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904797'>Convert enum to enum class</a></td><td>Ravindra</td></tr>
