--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4924633'>Update enum member style of VideoDecodeAccelerator::Config::OutputMode</a></td><td>akash1.yadav</td></tr>
 <tr><td>2023-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904618'>Use inline build condition instead of deprecated function</a></td><td>Leena Kaushik</td></tr>
 <tr><td>2023-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4930597'>[Code Health] Removing unnecessary use of optional on String.</a></td><td>Anguluri Aravind Kumar</td></tr>
 <tr><td>2023-10-10</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4892174'> Use base::EraseIf()</a></td><td>Himadri Agrawal</td></tr>
