--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4930425'>[DanglingPointer] Removed dangling pointer saved_files_service_unittest.cc</a></td><td>neehit</td></tr>
 <tr><td>2023-10-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4899740'>Removed duplicate code and added it to a function- addListItems</a></td><td>Himadri Agrawal</td></tr>
 <tr><td>2023-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4924633'>Update enum member style of VideoDecodeAccelerator::Config::OutputMode</a></td><td>akash1.yadav</td></tr>
 <tr><td>2023-10-12</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4904618'>Use inline build condition instead of deprecated function</a></td><td>Leena Kaushik</td></tr>
