--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4938530'>Convert Direction Type enum to enum class</a></td><td>Aditya</td></tr>
+<tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4940850'>Remove unnecessary comparison of unsigned against 0.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4930425'>[DanglingPointer] Removed dangling pointer saved_files_service_unittest.cc</a></td><td>neehit</td></tr>
 <tr><td>2023-10-14</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4899740'>Removed duplicate code and added it to a function- addListItems</a></td><td>Himadri Agrawal</td></tr>
 <tr><td>2023-10-13</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4924633'>Update enum member style of VideoDecodeAccelerator::Config::OutputMode</a></td><td>akash1.yadav</td></tr>
