--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,7 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4924712'>Add prefix k in AmbientAuthAllowedProfileTypes</a></td><td>Grandhi Sri Nikhil</td></tr>
 <tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4938530'>Convert Direction Type enum to enum class</a></td><td>Aditya</td></tr>
 <tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4940850'>Remove unnecessary comparison of unsigned against 0.</a></td><td>Shubham Gupta</td></tr>
 <tr><td>2023-10-16</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4930425'>[DanglingPointer] Removed dangling pointer saved_files_service_unittest.cc</a></td><td>neehit</td></tr>
