--- a/commits.html
+++ b/commits.html
@@ -13,6 +13,8 @@
 <table id="issuestable" class="display" cellspacing="0" width="100%">
 
 <thead><tr><th>Modified</th><th>Module</th><th>Subject</th><th>Author</th></thead>
+<tr><td>2023-10-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4975221'>Remove unnecessary comparison of unsigned against 0.</a></td><td>Shubham Gupta</td></tr>
+<tr><td>2023-10-25</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4938275'>Remove expired histogram Discover.Search.SearchStatus</a></td><td>vikas.mundra</td></tr>
 <tr><td>2023-10-23</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4963646'>Use base::Contains() instead of std::find()</a></td><td>fauzia.haque</td></tr>
 <tr><td>2023-10-20</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4941186'>Cleanup webrtc_browsertest_perf to use anonymous namespace</a></td><td>akash1.yadav</td></tr>
 <tr><td>2023-10-17</td><td>chromium</td><td><a href='https://chromium-review.googlesource.com/4924712'>Add prefix k in AmbientAuthAllowedProfileTypes</a></td><td>Grandhi Sri Nikhil</td></tr>
